--- a/tf/generative_models.ipynb
+++ b/tf/generative_models.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,6 +298,187 @@
    ],
    "source": [
     "history = tied_autoencoder.fit(X_train, X_train, epochs=20, validation_data=(X_valid, X_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variational autoencoders (VAE)\n",
+    "# drawing samples from gaussian distribution with given mean and logarithm of variance\n",
+    "class Sampling(tf.keras.layers.Layer):\n",
+    "    def call(self, inputs):\n",
+    "        mean, variance_log = inputs\n",
+    "        return tf.random.normal(tf.shape(variance_log)) * tf.exp(variance_log / 2) + mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss function\n",
+    "class KLDivergenceLayer(tf.keras.layers.Layer):\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super(KLDivergenceLayer, self).__init__(**kwargs)\n",
+    "\n",
+    "    def call(self, codings_mean, codings_variance_log):\n",
+    "        # KL divergence loss\n",
+    "        latent_loss = -0.5 * tf.reduce_sum(\n",
+    "            1 + codings_variance_log - tf.exp(codings_variance_log) - tf.square(codings_mean),\n",
+    "            axis=-1\n",
+    "        )\n",
+    "        # Add the loss to the layer\n",
+    "        self.add_loss(tf.reduce_mean(latent_loss) / 784.)\n",
+    "        return codings_mean, codings_variance_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codings_size = 10\n",
+    "\n",
+    "# encoder\n",
+    "inputs = tf.keras.layers.Input(shape=[28, 28])\n",
+    "Z = tf.keras.layers.Flatten()(inputs)\n",
+    "Z = tf.keras.layers.Dense(150, activation='relu')(Z)\n",
+    "Z = tf.keras.layers.Dense(100, activation='relu')(Z)\n",
+    "codings_mean = tf.keras.layers.Dense(codings_size)(Z)\n",
+    "codings_variance_log = tf.keras.layers.Dense(codings_size)(Z)\n",
+    "codings_mean, codings_variance_log = KLDivergenceLayer()(codings_mean, codings_variance_log)\n",
+    "codings = Sampling()([codings_mean, codings_variance_log])\n",
+    "variational_encoder = tf.keras.Model(\n",
+    "    inputs=[inputs],\n",
+    "    outputs=[codings_mean, codings_variance_log, codings]\n",
+    ")\n",
+    "\n",
+    "# decoder\n",
+    "decoder_inputs = tf.keras.layers.Input(shape=[codings_size])\n",
+    "X = tf.keras.layers.Dense(100, activation='relu')(decoder_inputs)\n",
+    "X = tf.keras.layers.Dense(150, activation='relu')(X)\n",
+    "X = tf.keras.layers.Dense(28*28, activation='sigmoid')(X)\n",
+    "outputs = tf.keras.layers.Reshape([28,28])(X)\n",
+    "variational_decoder = tf.keras.Model(\n",
+    "    inputs=[decoder_inputs],\n",
+    "    outputs=[outputs]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# VAE model\n",
+    "_, _, codings = variational_encoder(inputs)\n",
+    "reconstructions = variational_decoder(codings)\n",
+    "vae_model = tf.keras.Model(\n",
+    "    inputs=[inputs],\n",
+    "    outputs=[reconstructions]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/25\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1727949488.039496   35465 service.cc:146] XLA service 0x7fb948010550 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "I0000 00:00:1727949488.039878   35465 service.cc:154]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m 24/430\u001b[0m \u001b[32m━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - loss: 0.1546"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "I0000 00:00:1727949510.130796   35465 device_compiler.h:188] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m58s\u001b[0m 76ms/step - loss: 0.0755 - val_loss: 0.0397\n",
+      "Epoch 2/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step - loss: 0.0380 - val_loss: 0.0363\n",
+      "Epoch 3/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - loss: 0.0353 - val_loss: 0.0348\n",
+      "Epoch 4/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - loss: 0.0342 - val_loss: 0.0338\n",
+      "Epoch 5/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - loss: 0.0333 - val_loss: 0.0334\n",
+      "Epoch 6/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - loss: 0.0330 - val_loss: 0.0331\n",
+      "Epoch 7/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - loss: 0.0325 - val_loss: 0.0324\n",
+      "Epoch 8/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - loss: 0.0322 - val_loss: 0.0322\n",
+      "Epoch 9/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - loss: 0.0319 - val_loss: 0.0321\n",
+      "Epoch 10/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - loss: 0.0318 - val_loss: 0.0319\n",
+      "Epoch 11/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - loss: 0.0315 - val_loss: 0.0316\n",
+      "Epoch 12/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 5ms/step - loss: 0.0314 - val_loss: 0.0316\n",
+      "Epoch 13/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 9ms/step - loss: 0.0314 - val_loss: 0.0314\n",
+      "Epoch 14/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 10ms/step - loss: 0.0312 - val_loss: 0.0314\n",
+      "Epoch 15/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 9ms/step - loss: 0.0310 - val_loss: 0.0313\n",
+      "Epoch 16/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - loss: 0.0309 - val_loss: 0.0317\n",
+      "Epoch 17/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - loss: 0.0308 - val_loss: 0.0313\n",
+      "Epoch 18/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 8ms/step - loss: 0.0309 - val_loss: 0.0311\n",
+      "Epoch 19/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 7ms/step - loss: 0.0307 - val_loss: 0.0311\n",
+      "Epoch 20/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 12ms/step - loss: 0.0307 - val_loss: 0.0310\n",
+      "Epoch 21/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - loss: 0.0306 - val_loss: 0.0309\n",
+      "Epoch 22/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 10ms/step - loss: 0.0306 - val_loss: 0.0309\n",
+      "Epoch 23/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 13ms/step - loss: 0.0305 - val_loss: 0.0308\n",
+      "Epoch 24/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 11ms/step - loss: 0.0306 - val_loss: 0.0307\n",
+      "Epoch 25/25\n",
+      "\u001b[1m430/430\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 10ms/step - loss: 0.0305 - val_loss: 0.0306\n"
+     ]
+    }
+   ],
+   "source": [
+    "vae_model.compile(loss='mse', optimizer='nadam')\n",
+    "history = vae_model.fit(X_train, X_train, epochs=25, batch_size=128, validation_data=(X_valid, X_valid))"
    ]
   }
  ],
